--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url:
 resume_site: 
 github: https://github.com/Jiuxifo/
 baseurl: ""
-description: Actually, less is more!
+description: Attendence Management System
 meta_description: Minutes;Documentation;Progress
 motto: GRP Group 1 Project
 banner: Attendence Management System
